// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthResolver.register (e2e) should be allowed to register 1`] = `
Object {
  "email": "test@example.com",
}
`;

exports[`AuthResolver.register (e2e) should not be allowed to register with an already used email 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: EMAIL_ALREADY_USED],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`AuthResolver.register (e2e) should not be allowed to register with an invalid email 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Bad Request Exception],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`AuthResolver.register (e2e) should not be allowed to register with password too short 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Bad Request Exception],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
